--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,51 @@
 .row {
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(255, 0, 93);
-}
- .alert-primary {
-    height: 40vh;
+    height: auto;
+  
  }
 
- .row {
-    height: 40vh;
+ .leo {
+    width: 30vw;
  }
+   
+ .col-sm h1 {
+    color:#0f3647;
+    margin: 25% 0% 0% 25%;
+    font-size: 3em;
+    text-align:left;
+}
+#snippet {
+    font-size: 1.5em;
+}
+
+#process{
+    background-color: #D6C89B;
+}
+
+.image {
+    /* width:5vw; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+
+h3 {
+color: rgb(255, 255, 255);
+text-align: center;
+}
+
+p {
+    color:white;
+    text-align: center;
+}
+footer {
+    background-color: black;
+}
+/* #leo {
+background-image: url(content/Leotransparent.gif);
+background-size: 65%;
+background-repeat: no-repeat;
+
+} */
