--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,10 @@
    }
 /* CSS targets col-sm class includes margin top and a border 
 used when im laying the site out. */
- .col-sm{
+ .col-sm {
     /* border: 1px solid rgb(255, 0, 93); */
     margin-top: 4vh;
+    
 }
 /* Targets the table inside the col-sm tag */
 .col-sm table {
@@ -32,7 +33,7 @@ used when im laying the site out. */
     width: 30vw; 
     }
  /* Targets the h1 tag nested inside the col-sm class */
- col-sm h1 {
+ .col-sm h1 {
     color:#0f3647;
     margin: 25% 0% 0% 25%;
     font-size: 3em;
